# encode

./: .env.examle  README.md  agent_output.txt  config.ts  fetchMostValuableCoins.ts  fetchMultipleCoins.ts  fetchTopVolumeCoins.ts  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
ai-bot/: fetchCoinComments.ts  fetchMultipleCoins.ts  fetchSingleCoin.ts  main.py  package.json
ai-bot/api/: chat.py  coins.py  messages.py  tools.py  users.py
assets/: result
backend/: .env.examle  .gitignore  package-lock.json  plt.py  pyproject.toml  tools.py  tsconfig.json
backend/api/: chat.py  coins.py  users.py
backend/api/api/: chat.py
backend/data/: Automated asymmetric intranet.csv  Base Batches.csv  CREATE.csv  Danzi needs your love.csv  Hello Sunshine.csv  IMG_0344.csv  JUST KEEP CLICKING.csv  Mobil++.csv  Mysterious Megapeak.csv  OG BABYFACE.csv  Profound value-added open.csv  amps.fun.csv  cow cat.csv  horse.csv  zora Ship coin.csv
backend/zora_api/: config.ts  fetchLastTradedCoins.ts  fetchMostValuableCoins.ts  fetchTopVolumeCoins.ts  fetchUserProfile.ts
chatbot/: .env.examle  .gitignore  README.md  fastapi_run.sh  main.py  package.json  pyproject.toml  result.txt  settings.py  tsconfig.json  web_agent.py  zora_agent.py  zora_tools.py
chatbot/zora_api/: fetchCoinComments.ts  fetchLastTradedCoins.ts  fetchNewCoins.ts  fetchSingleCoin.ts  fetchTopGainers.ts  fetchUserProfile.ts
src/: App.tsx  erc20_abi.json  main.tsx  stars.css  style.css  vite-env.d.ts  wagmiConfig.ts
src/abi/: UniswapRouter.json
src/api/: message.ts  (+1 more)
(+33 files in other folders)
